--- a/css/field-attendance.css
+++ b/css/field-attendance.css
@@ -1,6 +1,25 @@
+* {
+  padding: 0;
+  margin: 0;
+}
 #field-attendance {
   width: 100%;
   height: 667px;
   background-color: #F9F9F9;
+}
+#field-attendance .field-attendance-title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #EEEEEE;
+  padding: 10px 16px;
+}
+#field-attendance .field-attendance-title h5 {
+  font-size: 20px;
+  font-weight: 400;
+  margin: 0;
+}
+#field-attendance .field-attendance-title img {
+  vertical-align: top;
 }
 /*# sourceMappingURL=field-attendance.css.map */
