--- a/css/field-attendance.less
+++ b/css/field-attendance.less
@@ -1,5 +1,28 @@
+*{
+  padding: 0;
+  margin: 0;
+}
+
 #field-attendance{
   width: 100%;
   height: 667px;
   background-color: #F9F9F9;
+
+  .field-attendance-title{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #EEEEEE;
+    padding: 10px 16px;
+
+    h5{
+      font-size: 20px;
+      font-weight: 400;
+      margin: 0;
+    }
+
+    img{
+      vertical-align: top;
+    }
+  }
 }
